# zookeeper-client-rust

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: tls_file_based.rs
src/: acl.rs  chroot.rs  deadline.rs  endpoint.rs  error.rs  lib.rs  proto.rs  record.rs  tls.rs  util.rs
src/client/: client.rs  mod.rs  operation.rs  session.rs  types.rs  watcher.rs
src/client/session/: watch.rs
src/proto/: acl.rs  auth.rs  check.rs  connect.rs  consts.rs  data.rs  error_code.rs  event.rs  mod.rs  multi.rs  op_code.rs  path.rs  reconfig.rs  reply_header.rs  request_header.rs  stat.rs
src/sasl/: digest_md5.rs  gssapi.rs  mod.rs
src/sasl/mechanisms/: digest_md5.rs
src/session/: connection.rs  depot.rs  event.rs  mod.rs  request.rs  types.rs  watch.rs  xid.rs
src/tls/: cert.rs  client.rs  mod.rs  options.rs  verifier.rs
tests/: zookeeper.rs
