[package]
name = "zookeeper-client"
version = "0.6.3"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "ZooKeeper async client"
homepage = "https://github.com/kezhuw/zookeeper-client-rust/"
repository = "https://github.com/kezhuw/zookeeper-client-rust/"
documentation = "https://docs.rs/zookeeper-client/"
license = "MIT"
keywords = ["ZooKeeper"]
categories = ["api-bindings"]
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
tokio = {version = "1.15.0", features = ["full"]}
thiserror = "1.0.30"
strum = { version = "0.23", features = ["derive"] }
num_enum = "0.5.6"
ignore-result = "0.2.0"
compact_str = "0.4"
const_format = "0.2.22"
log = "0.4.14"
static_assertions = "1.1.0"
hashbrown = "0.12.0"
hashlink = "0.8.0"
either = "1.9.0"
uuid = { version = "1.4.1", features = ["v4"] }
rustls = "0.23.2"
rustls-pemfile = "2"
webpki-roots = "0.26.1"
derive-where = "1.2.7"
tokio-rustls = "0.26.0"

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
rand = "0.8.4"
pretty_assertions = "1.1.0"
test-case = "3"
testcontainers = { git = "https://github.com/kezhuw/testcontainers-rs.git", branch = "zookeeper-client" }
assertor = "0.0.2"
assert_matches = "1.5.0"
tempfile = "3.6.0"
rcgen = { version = "0.12.1", features = ["default", "x509-parser"] }
