[package]
name = "zookeeper-client"
version = "0.8.0"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "ZooKeeper async client"
homepage = "https://github.com/kezhuw/zookeeper-client-rust/"
repository = "https://github.com/kezhuw/zookeeper-client-rust/"
documentation = "https://docs.rs/zookeeper-client/"
license = "MIT"
keywords = ["ZooKeeper"]
categories = ["api-bindings"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tls = ["rustls", "rustls-pemfile", "webpki-roots"]
sasl = ["sasl-gssapi", "sasl-digest-md5"]
sasl-digest-md5 = ["rsasl/unstable_custom_mechanism", "md5", "linkme", "hex"]
sasl-gssapi = ["rsasl/gssapi"]

[dependencies]
bytes = "1.1.0"
tokio = {version = "1.15.0", features = ["full"]}
thiserror = "1.0.30"
strum = { version = "0.23", features = ["derive"] }
num_enum = "0.5.6"
ignore-result = "0.2.0"
compact_str = "0.4"
const_format = "0.2.22"
static_assertions = "1.1.0"
hashbrown = "0.12.0"
hashlink = "0.8.0"
either = "1.9.0"
uuid = { version = "1.4.1", features = ["v4"] }
rustls = { version =  "0.23.2", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26.1", optional = true }
derive-where = "1.2.7"
tokio-rustls = "0.26.0"
fastrand = "2.0.2"
tracing = "0.1.40"
rsasl = { version = "2.2.0", default-features = false, features = ["provider", "config_builder", "registry_static", "std"], optional = true }
md5 = { version = "0.7.0", optional = true }
hex = { version = "0.4.3", optional = true }
linkme = { version = "0.3", optional = true }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["log", "trace"] }
env_logger = "0.10.0"
rand = "0.8.4"
pretty_assertions = "1.1.0"
test-case = "3"
testcontainers = { git = "https://github.com/kezhuw/testcontainers-rs.git", branch = "zookeeper-client" }
assertor = "0.0.2"
assert_matches = "1.5.0"
tempfile = "3.6.0"
rcgen = { version = "0.12.1", features = ["default", "x509-parser"] }
serial_test = "3.0.0"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.docs.rs]
all-features = true
